# Excercises-In-C

./: .gitignore  README.md
Basic Rust/HelloWorld/src/: main.rs  print.rs  prints.rs  vars.rs
Calculator in C/: Makefile  main  main.c
Classes in C/: Makefile
Classes in C/src/: animal.c  cat.c  cow.c  main.c
Classes in C/src/includes/: animal.h  cat.h  cow.h
SFML Projects/Generic SFML Utils/classes/: button.hpp
SFML Projects/Generic SFML Utils/src/: button.cpp  linked_list.cpp  random_number_generator.cpp
SFML Projects/Sorting Visual in C++/: Makefile  main.cpp
SFML Projects/Sorting Visual in C++/classes/: linked_list.hpp
SFML Projects/Tetris in C++/: .gitignore  Makefile  README  main.cpp
SFML Projects/Tetris_C++/: CMakeLists.txt  README  main.cpp
SFML Projects/template/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
SFML Projects/template/src/: game.cpp
SFML Projects/template/test_package/: conanfile.py
Sorting Visual in C++/: Makefile  main.cpp
Sorting Visual in C++/src/: random_number_generator.cpp
Tetris in C/: Makefile  board.cpp  linked_list.cpp  main  main.cpp  point.h
Tetris in C/classes/: board.hpp  button.hpp  config.hpp  game.hpp  game_loop.hpp  piece.hpp  point.hpp
Tetris in C/src/: board.cpp  button.cpp  config.h  game.cpp  game_loop.cpp  linked_list.cpp  piece.cpp  random_number_generator.cpp
calculator_gui_rust/: Cargo.toml
calculator_gui_rust/src/: main.rs  math.rs
calculator_rust/src/: main.rs
simple_web_page_rust/: Cargo.toml
simple_web_page_rust/src/: main.rs
text process excersice/: Makefile
(+22 files in other folders)
